--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ body {
     font-size: 100%;
     font-weight: bold;
     cursor: pointer;
+    text-align: center;
 }
 .logbuttn:hover {
     background-color: #00bf7c;
@@ -55,6 +56,7 @@ body {
     font-size: 100%;
     font-weight: bold;
     cursor: pointer;
+    text-align: center;
 }
 .signbuttn:hover {
     background-color: whitesmoke;
