--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ body {
     font-weight: bold;
     cursor: pointer;
     text-align: center;
+    outline: none;
 }
 .logbuttn:hover {
     background-color: #00bf7c;
@@ -57,6 +58,7 @@ body {
     font-weight: bold;
     cursor: pointer;
     text-align: center;
+    outline: none;
 }
 .signbuttn:hover {
     background-color: whitesmoke;
